sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: not found: value longeur
  while (posGraincheux < longeur) {
                         ^